<resources>
    <string name="app_name">NexLua</string>
    <string name="fragment_project">项目</string>
    <string name="fragment_plugin">插件</string>
    <string name="fragment_docs">文档</string>
    <string name="fragment_home">主页</string>
    <!-- Fragment Project -->
    <string name="project_info">版本: %1$s | 包名: %2$s</string>
    <string name="search">搜索</string>
    <string name="new_project">新建项目</string>
    <string name="import_project">导入项目</string>
    <string name="install_plugin">导入插件</string>
    <string name="settings">设置..</string>

    <string name="create_new_project">创建新项目</string>
    <string name="project_name">项目名称</string>
    <string name="project_package_name">项目包名</string>
    <string name="create_project">创建项目</string>
    <string name="project_name_info">查看项目名称说明</string>
    <string name="package_name_info">查看项目包名说明</string>
    <string name="help">帮助</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
</resources>